--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Copy .env file
         run: cp .env.example .env
 
+      - name: Generate application key
+        run: php artisan key:generate
+
       - name: Install Composer dependencies
         run: composer install --no-scripts --no-interaction --no-progress --prefer-dist
 
